# py

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  pyproject.toml
.aspect/: config.axl
tools/: BUILD.bazel  repin
tools/format/: BUILD.bazel
