"""Targets in the repository root"""

exports_files(
    [
    ],
    visibility = ["//:__subpackages__"],
)

# The gazelle binary + `gazelle` runner target live in //tools/gazelle (the
# default target for `aspect gazelle`). Run `aspect gazelle` to generate BUILDs.

# uv reads pyproject.toml; tools/pytest also attaches it as test data.
exports_files(
    ["pyproject.toml"],
    visibility = ["//:__subpackages__"],
)
